# FINAL

./: .~lock.Presentation 3 copy.odp#  F_Presentation.odp  Presentation 3.odp  Presentation1.odp  Presentation2.odp  Results.ods  bgrijk.txt  Πρότυπο-Πτυχιακής-Εργασίας.odt
Archive/MDHVRP/AACONC_6_VRP/: AACONC.c  CMakeLists.txt  Info.txt  antSolution.c  comp.ods  createClusters.c  listFunctions.c  main.c  miscFunctions.c  roulette.c
Archive/MDHVRP/AACONC_6_VRP/Pseudocode/: AACONC.tex  createClusters.tex  createClustersDrone.tex  evaporation.tex  phUpdate.tex  selectCluster.aux  selectCluster.tex  selectCustomer.tex  selectVehicleType.aux  singleColonyOpt.tex
Archive/MDHVRP/AACONC_6_VRP/header_files/: local_opt.h  roulette.h
Archive/MDHVRP/proximity_VRP/: CMakeLists.txt  Initialization1.c  createClusters.c  localOpt.c
Archive/MDHVRP/proximity_VRP/header_files/: local_opt.h  structs.h
Experiments/: .~lock.ACO_RESULTS_15-15-15.ods#  .~lock.Results20.ods#  .~lock.drone_exp.ods#  .~lock.motorbike_exp.ods#  ACO_RESULTS_15-15-15.ods  ACO_RESULTS_15-20-20.ods  ACO_RESULTS_15-20-30.ods  ACO_data_tables.ods  FINAL_RESULTS.ods  Motorbike_averages.ods  Results20.ods  drone_exp.ods  motorbike_ALL_smaller.ods  motorbike_exp.ods  notes1
MD-mfcmTSP/: Comp_times.csv  Comp_times.ods  FINAL_results.ods  SameSpeeds.ods  comparison_optimization_times.csv  heuristic_comp.ods  heuristic_comp_to_AVG_results.csv  heuristics_comp_proximity.csv  heuristics_gaps_to_AVG.csv  heuristics_gaps_to_BEST.csv  heuristics_gaps_to_WORST.csv
Plot/: a.out  generateGraph.py  getInstance.c  (+4 more)
(+1070 files in other folders)
